--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -1,13 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Mi pagina de prueba en verdad</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	<h1>Titulo de prueba</h1>
-	<section>
-		<h1>Titulo en seccion</h1>
-	</section>
-</body>
+<!doctype html>
+<html lang="es">
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css">
+		<meta name="viewport" content="with=device-width, initial-scale=1.0">
+		<title>Pr&aacute;ctica 1 PCW</title>
+	</head>
+	<body>
+		<header>
+			<img id="imagen-header" src="logo-heder.png" alt="logo">
+			<h1>Recetas de cocina</h1>
+			
+		</header>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html">Inicio</a>
+					<a href="buscar.html">Buscar</a>
+					<a href="login.html">Login</a>
+					<a href="#">Logout</a>
+					<a href="registro.html">Registro</a>
+					<a href="nueva-receta.html">Nueva receta</a>
+				</li>
+			</ul>
+		</nav>
+	</body>
 </html>
