casi done el index

--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -1,28 +1,52 @@
 <!doctype html>
 <html lang="es">
 	<head>
+
 		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/fontello.css">
 		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="with=device-width, initial-scale=1.0">
 		<title>Pr&aacute;ctica 1 PCW</title>
 	</head>
 	<body>
 		<header>
-			<img id="imagen-header" src="logo-heder.png" alt="logo">
-			<h1>Recetas de cocina</h1>
-			
+			<div id="contenedor-header">
+				<img id="imagen-header" src="logo-header.png" alt="logo">
+				<h1>Recetas de cocina</h1>
+				<p>Las mejores recetias de cocina</p>
+			</div>
 		</header>
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html">Inicio</a>
-					<a href="buscar.html">Buscar</a>
-					<a href="login.html">Login</a>
-					<a href="#">Logout</a>
-					<a href="registro.html">Registro</a>
-					<a href="nueva-receta.html">Nueva receta</a>
+					<a class="icon-home" href="index.html">Inicio</a>
+					<a class="icon-search" href="buscar.html">Buscar</a>
+					<a class="icon-user" href="login.html">Login</a>
+					<a class="icon-user-times" href="#">Logout</a>
+					<a class="icon-user-plus" href="registro.html">Registro</a>
+					<a class="icon-plus-circled" href="nueva-receta.html">Nueva receta</a>
 				</li>
 			</ul>
 		</nav>
+ 		<footer>
+	        <div class="social-footer">
+	            <div class="center">
+	                <img src="twitter.png" alt="twitter" height="48" width="55">
+	            </div>
+	        </div>
+	        <div class="social-footer">
+	            <div class="center">
+	                <img src="facebook.png" alt="twitter" height="55" width="28">
+	            </div>
+	        </div>
+	        <div class="social-footer">
+	            <div class="center">
+	                <img src="instagram.png" alt="twitter" height="52" width="52">
+	            </div>
+	        </div>
+	        <p style="text-align: center; padding-top:100px;"></p>
+	        <span class="copyright">&copy;<date datetime="2018-2-9">2018-2-9</span>
+    	</footer>
 	</body>
 </html>
