perfeccionando la vaina

--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -13,7 +13,7 @@
 		<header>
 			<div id="contenedor-header">
 				<img id="imagen-header" src="logo-header.png" alt="logo">
-				<h1>Recetas de cocina</h1>
+				<h1><b>Recetas de cocina</b></h1>
 				<p>Las mejores recetias de cocina</p>
 			</div>
 		</header>
@@ -32,21 +32,31 @@
  		<footer>
 	        <div class="social-footer">
 	            <div class="center">
-	                <img src="twitter.png" alt="twitter" height="48" width="55">
+	                <a href="https://www.twitter.com/"><img src="twitter.png" alt="twitter" height="48" width="55"></a>
 	            </div>
 	        </div>
 	        <div class="social-footer">
 	            <div class="center">
-	                <img src="facebook.png" alt="twitter" height="55" width="28">
+	                <a href="https://www.facebook.com/"><img src="facebook.png" alt="facebook" height="55" width="28"></a>
 	            </div>
 	        </div>
 	        <div class="social-footer">
 	            <div class="center">
-	                <img src="instagram.png" alt="twitter" height="52" width="52">
+	                <a href="https://www.instagram.com/"><img src="instagram.png" alt="instagram" height="52" width="52"></a>
 	            </div>
 	        </div>
-	        <p style="text-align: center; padding-top:100px;"></p>
-	        <span class="copyright">&copy;<date datetime="2018-2-9">2018-2-9</span>
+	        <!-- Final de las 3 redes sociales-->
+
+	        <!-- Comienzo de la parte del copyright y demas -->
+	        <p style="text-align: center; padding-top:100px; margin:0"></p>
+	        <span class="copyright">
+	        	&copy;<date datetime="2018-2-9"><b>2018-2-9</b><a href="acerca.html" style="text-decoration: none; color: #000;">Acerca de nosotros</a>
+	        </span>
+	        
+	       	<div id="boton-ir-arriba">
+	       		<a  class="icon-angle-circled-up" href="#contenedor-header"></a>
+	       	</div>
+	        
     	</footer>
 	</body>
 </html>
