--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="css/fontello.css">
 		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="with=device-width, initial-scale=1.0">
-		<title>Pr&aacute;ctica 1 PCW</title>
+		<title>Inicio</title>
+
 	</head>
 	<body>
 		<header>
@@ -29,6 +30,21 @@
 				</li>
 			</ul>
 		</nav>
+
+		<!-- El contenedor del buscador de arriba de las recetas -->
+		<div id="contenedor-buscador-recetas">
+			<p><strong>Ordenar las recetas de manera: </strong>
+				<select>
+					<option>Ascendente ▲</option>
+					<option>Descendente ▼</option>
+					<option>Fecha 📆</option>
+					<option>Valoración 🌟</option>
+				</select>
+				<input type="text" name="buscar" placeholder="Introduzca su busqueda">
+				<button><span class="icon-search"></span></button>
+				
+			</p>
+		</div>
 		
 
 		<!-- El contenedor para las recetas -->
