menu de hamburguesa vegana

--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -18,16 +18,18 @@
 				<p>Las mejores recetas de cocina</p>
 			</div>
 		</header>
+
+		<input type="checkbox" id="ckbmenu">
+
 		<nav>
 			<ul>
-				<li>
-					<a class="icon-home" href="index.html">Inicio</a>
-					<a class="icon-search" href="buscar.html">Buscar</a>
-					<a class="icon-user" href="login.html">Login</a>
-					<a class="icon-user-times" href="#">Logout</a>
-					<a class="icon-user-plus" href="registro.html">Registro</a>
-					<a class="icon-plus-circled" href="nueva-receta.html">Nueva receta</a>
-				</li>
+				<li><label for="ckbmenu">&equiv;</label></li>
+				<li><a  href="index.html"><span class="icon-home" aria-hidden="true"></span><span>Inicio</span></a></li>
+				<li><a href="buscar.html"><span class="icon-search" aria-hidden="true"></span><span>Buscar</span></a></li>
+				<li><a href="login.html"><span class="icon-user" aria-hidden="true"></span><span>Login</span></a></li>
+				<li><a href="#"><span class="icon-user-times" aria-hidden="true"></span><span>Logout</span></a></li>
+				<li><a href="registro.html"><span class="icon-user-plus" aria-hidden="true"></span><span>Registro</span></a></li>
+				<li><a href="nueva-receta.html"><span class="icon-plus-circled" aria-hidden="true"></span><span>Nueva receta</span></a></li>
 			</ul>
 		</nav>
 
