--- a/Practica1/nueva-receta.html
+++ b/Practica1/nueva-receta.html
@@ -18,20 +18,45 @@
 				<p>Las mejores recetas de cocina</p>
 			</div>
 		</header>
+		<input type="checkbox" id="ckbmenu">
+
 		<nav>
 			<ul>
-				<li>
-					<a class="icon-home" href="index.html">Inicio</a>
-					<a class="icon-search" href="buscar.html">Buscar</a>
-					<a class="icon-user" href="login.html">Login</a>
-					<a class="icon-user-times" href="#">Logout</a>
-					<a class="icon-user-plus" href="registro.html">Registro</a>
-					<a class="icon-plus-circled" href="nueva-receta.html">Nueva receta</a>
-				</li>
+				<li><label for="ckbmenu">&equiv;</label></li>
+				<li><a  href="index.html"><span class="icon-home" aria-hidden="true"></span><span>Inicio</span></a></li>
+				<li><a href="buscar.html"><span class="icon-search" aria-hidden="true"></span><span>Buscar</span></a></li>
+				<li><a href="login.html"><span class="icon-user" aria-hidden="true"></span><span>Login</span></a></li>
+				<li><a href="#"><span class="icon-user-times" aria-hidden="true"></span><span>Logout</span></a></li>
+				<li><a href="registro.html"><span class="icon-user-plus" aria-hidden="true"></span><span>Registro</span></a></li>
+				<li><a href="nueva-receta.html"><span class="icon-plus-circled" aria-hidden="true"></span><span>Nueva receta</span></a></li>
 			</ul>
 		</nav>
 
 	
+		<div id="contenedor-formulario-login-registro">
+			<section id="formulario-login-registro">	  
+				<h2>NUEVA RECETA</h2>  
+		    <form>
+
+		      <label for="usu"><strong>Nombre de usuario: </strong></label><input id="usu" type="text" name="usuario" autofocus required pattern="^[a-zA-Z][a-zA-Z0-9]{5,19}$" title="Solo letras y numeros, no empezar con numero" maxlength="20" size="15" ><br>
+
+		      <label for="psw"><strong>Contraseña: </strong></label><input id="psw" type="password" name="psw" required pattern="^[a-zA-Z][a-zA-Z0-9/-/_]{7,19}$" size="15" title="Introduzca aqui su contraseña que debe empezar por una letra"><br>
+
+		      <label for="psw2"><strong>Confirma contraseña: </strong></label><input id="psw2" type="password" name="psw2" required pattern="^[a-zA-Z][a-zA-Z0-9/-/_]{7,19}$" size="15" title="Introduzca aqui su contraseña que debe empezar por una letra"><br>
+
+		      <label for="nombre"><strong>Nombre completo: </strong></label><input id="nombre" type="text" name="nombre" required title="Introduzca aqui su nombre completo"><br>
+
+		      <label for="email"><strong>E-mail: </strong></label><input id="email" type="email" name="email" required title="Introduzca aqui su correo electronico"><br>
+
+		      <label for="fecha"><strong>Fecha: </strong></label><input id="fecha" type="date" name="fecha" required title="Introduzca aqui su fecha de nacimiento"><br>
+		      
+
+		      <input type="submit" value="Enviar"><br><br>
+		      
+
+		    </form>
+	  	</section>
+		</div>
 
 
  		<footer id="footer-comun">
