puntos para los titulos

--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -37,7 +37,7 @@
 		<div id="contenedor-buscador-recetas">
 			<p><strong>Ordenar las recetas de manera: </strong>
 				<select>
-					<option>Ascendente ▲</option>
+					<option>Ascendente ▲ </option>
 					<option>Descendente ▼</option>
 					<option>Fecha 📆</option>
 					<option>Valoración 🌟</option>
@@ -55,7 +55,7 @@
 			<div class="contenedor-recetas">
 				<section>
 					<header>
-						<a href="receta.html"><h3>Coso vegano</h3></a>
+						<a href="receta.html"><h3>Coso veganoooooooooooooooooo</h3></a>
 						<p><a href="buscar.html">By Ruben Rubio</a></p>
 						<p>
 							<span class="icon-comment" id="boton-comentario">50</span>
