tengo que arreglar todos los fallos

--- a/Practica1/login.html
+++ b/Practica1/login.html
@@ -43,7 +43,7 @@
 		      <label for="psw"><strong>Contraseña: </strong></label><input id="psw" type="password" name="psw" placeholder="contraseña" pattern="^[a-zA-Z][a-zA-Z0-9/-/_]{7,19}$" required size="15" title="Introduzca aqui su contraseña que debe empezar por una letra"><br>
 		      
 		      <input type="submit" value="Enviar"><br><br>
-		      ¿Todavía no tienes cuenta? <a href="registro.html"><u><strong>Registrate aquí</strong></u></span></a>
+		      ¿Todavía no tienes cuenta? <a href="registro.html"><u><strong>Registrate aquí</strong></u></a>
 
 		    </form>
 	  	</section>
