final practica segurisimo tio

--- a/Practica1/receta.html
+++ b/Practica1/receta.html
@@ -71,7 +71,7 @@
 					<span id="ultimos-comentarios">Ultimos comentarios</span>
 
 					<!-- Zona de comentarios -->
-					<div id="contenedor-receta-comentarios">
+					<div class="contenedor-receta-comentarios">
 						<h3>Titulo comentario</h3>
 						<p class="subtitulo-comentario-receta">
 							<span class="icon-user"></span>
@@ -81,7 +81,7 @@
 						<p class="comentario-receta">Vestibulum id tellus sit amet urna blandit ornare sit amet accumsan metus. Integer et neque feugiat, eleifend justo et, tristique diam. Donec ac ligula ut ligula feugiat bibendum et molestie enim. Mauris condimentum et magna eu pharetra. Sed cursus egestas lectus eget lobortis. Fusce sollicitudin sem sed accumsan venenatis. Praesent id mauris sit amet metus commodo ultricies. Mauris elit lacus, convallis id dignissim vitae, bibendum nec metus. Donec dapibus mauris enim, eu mollis purus tincidunt pretium. Curabitur interdum libero elit, sit amet fringilla eros egestas in. Duis nisl lacus, facilisis a justo vitae, posuere tempus dolor. Donec massa lectus, suscipit ut ligula consequat, aliquam sagittis odio. </p>
 					</div>
 
-					<div id="contenedor-receta-comentarios">
+					<div class="contenedor-receta-comentarios">
 						<h3>Titulo comentario</h3>
 						<p class="subtitulo-comentario-receta">
 							<span class="icon-user"></span>
@@ -101,7 +101,7 @@
 						<form>
 							<p>
 								TITULO:
-								<input type="text" name="titulo" 	maxlength="50" pattern="[a-zA-Z0-9]{1,49}$" title="minimo 1 caracter y maximo 50" reuired>
+								<input type="text" name="titulo" maxlength="50" pattern="[a-zA-Z0-9]{1,49}$" title="minimo 1 caracter y maximo 50" required>
 							</p>
 						
 							<textarea required></textarea>
