--- a/Practica1/registro.html
+++ b/Practica1/registro.html
@@ -51,7 +51,7 @@
 		      
 
 		      <input type="submit" value="Enviar"><br><br>
-		      ¿Ya tienes una cuenta?<a href="login.html"><u><strong>Inicia sesión aquí</strong></u></span></a>
+		      ¿Ya tienes una cuenta?<a href="login.html"><u><strong>Inicia sesión aquí</strong></u></a>
 
 		    </form>
 	  	</section>
