--- a/Practica1/acerca.html
+++ b/Practica1/acerca.html
@@ -50,10 +50,15 @@
 		    		<br>
 		    		<b>Apellidos: </b>Rubio Martínez
 		    		<br>
-		    		<b>Grupo:</b>
+		    		<b>Grupo: </b> 7
 		    		<br>
 		    		<b>Correo electronico: </b>rubensipala@gmail.com
-
+					<br>
+					<br>
+					A la hora de la realización de la práctica no encontré ningun problema, pude completar todos los apartados tal y como se listan en el enunciado.
+		    	</p>
+		    	<p>
+		    		
 		    	</p>
 	  		</section>
 		</div>
