--- a/Practica2/buscar.html
+++ b/Practica2/buscar.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/fontello.css">
 		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="with=device-width, initial-scale=1.0">
+		<script src="codigo.js"></script>
 		<title>Buscar</title>
 
 	</head>
