--- a/Practica2/registro.html
+++ b/Practica2/registro.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="es">
 	<head>
-
 		<meta charset="utf-8">
-		
 		<link rel="stylesheet" type="text/css" href="css/fontello.css">
 		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="with=device-width, initial-scale=1.0">
+		<script src="codigo.js"></script>
 		<title>Registro</title>
 
 	</head>
