--- a/Practica2/buscar.html
+++ b/Practica2/buscar.html
@@ -61,7 +61,7 @@
 					<input id="elaboracion" type="number" name="tiempo" min="5" max="100" step="5" placeholder="tiempo de elaboración"></label>
 					
 					<br>
-					<input onsubmit="realizarBusqueda();" type="submit" name="Enviar">
+					<input type="submit" name="Enviar">
 					<input type="reset" name="">
 				</form>
 
