--- a/Practica2/acerca.html
+++ b/Practica2/acerca.html
@@ -21,7 +21,7 @@
 		</header>
 		<input type="checkbox" id="ckbmenu">
 
-		<nav>
+		<nav id="menu">
 			<ul>
 				<li><label for="ckbmenu">&equiv;</label></li>
 				<li><a  href="index.html"><span class="icon-home" aria-hidden="true"></span><span>Inicio</span></a></li>
