--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -11,7 +11,7 @@
 		<title>Inicio</title>
 
 	</head>
-	<body onload="arranque();peticionRecetas('rest/receta/');">
+	<body onload="arranque();peticionRecetas('./rest/receta/');">
 		<header>
 			<div id="contenedor-header">
 				<img id="imagen-header" src="Images/logo-header.png" alt="logo">
@@ -22,7 +22,7 @@
 
 		<input type="checkbox" id="ckbmenu">
 
-		<nav>
+		<nav id="menu">
 			<ul>
 				<li><label for="ckbmenu">&equiv;</label></li>
 				<li><a  href="index.html"><span class="icon-home" aria-hidden="true"></span><span>Inicio</span></a></li>
