--- a/Practica2/registro.html
+++ b/Practica2/registro.html
@@ -9,7 +9,7 @@
 		<title>Registro</title>
 
 	</head>
-	<body>
+	<body onload="arranque();">
 		<header>
 			<div id="contenedor-header">
 				<img id="imagen-header" src="Images/logo-header.png" alt="logo">
@@ -19,7 +19,7 @@
 		</header>
 		<input type="checkbox" id="ckbmenu">
 
-		<nav>
+		<nav id="menu">
 			<ul>
 				<li><label for="ckbmenu">&equiv;</label></li>
 				<li><a  href="index.html"><span class="icon-home" aria-hidden="true"></span><span>Inicio</span></a></li>
