--- a/Practica2/login.html
+++ b/Practica2/login.html
@@ -21,14 +21,14 @@
 			</div>
 		</header>
 		<input type="checkbox" id="ckbmenu">
-
+		
 		<nav id="menu">
 			<ul>
 				<li><label for="ckbmenu">&equiv;</label></li>
 				<li><a  href="index.html"><span class="icon-home" aria-hidden="true"></span><span>Inicio</span></a></li>
 				<li><a href="buscar.html"><span class="icon-search" aria-hidden="true"></span><span>Buscar</span></a></li>
 				<li><a href="login.html"><span class="icon-user" aria-hidden="true"></span><span>Login</span></a></li>
-				<li><a href="#"><span class="icon-user-times" aria-hidden="true"></span><span>Logout</span></a></li>
+				<li onclick="cerrar();"><a href="#"><span class="icon-user-times" aria-hidden="true"></span><span>Logout</span></a></li>
 				<li><a href="registro.html"><span class="icon-user-plus" aria-hidden="true"></span><span>Registro</span></a></li>
 				<li><a href="nueva-receta.html"><span class="icon-plus-circled" aria-hidden="true"></span><span>Nueva receta</span></a></li>
 			</ul>
@@ -40,16 +40,16 @@
 				<h2>LOGIN</h2>  
 		    <form onsubmit="return hacerLogin(this);">
 
-		      <label for="usu"><strong>Nombre de usuario: </strong></label><input id="usu" type="text" name="usuario" autofocus required placeholder="usuario  " pattern="^[a-zA-Z][a-zA-Z0-9]{5,19}$" title="Solo letras y numeros, no empezar con numero" maxlength="20" size="15" ><br>
+		      <label for="usu"><strong>Nombre de usuario: </strong></label><input id="usu" type="text" name="login" autofocus required placeholder="usuario  " pattern="^[a-zA-Z][a-zA-Z0-9]{5,19}$" title="Solo letras y numeros, no empezar con numero" maxlength="20" size="15"><br>
 
-		      <label for="psw"><strong>Contraseña: </strong></label><input id="psw" type="password" name="psw" placeholder="contraseña" pattern="^[a-zA-Z][a-zA-Z0-9/-/_]{7,19}$" required size="15" title="Introduzca aqui su contraseña que debe empezar por una letra"><br>
+		      <label for="psw"><strong>Contraseña: </strong></label><input id="psw" type="password" name="pwd" placeholder="contraseña" pattern="^[a-zA-Z][a-zA-Z0-9/-/_]{7,19}$" required size="15" title="Introduzca aqui su contraseña que debe empezar por una letra"><br>
 		      
 		      <input type="submit" value="Enviar"><br><br>
 		      ¿Todavía no tienes cuenta? <a href="registro.html"><u><strong>Registrate aquí</strong></u></a>
 
 		    </form>
 		    
-	  	</section>
+	  		</section>
 		</div>
 		
 
@@ -87,5 +87,9 @@
     	</footer>
 		</div>
 		
+		<div id="errorLogin" style="display:none;">
+			<p>Error en el login</p>
+			<button onclick="aceptarErrorLogin()">Aceptar</button>
+		</div>
 	</body>
 </html>
