--- a/Practica2/registro.html
+++ b/Practica2/registro.html
@@ -25,7 +25,7 @@
 				<li><a  href="index.html"><span class="icon-home" aria-hidden="true"></span><span>Inicio</span></a></li>
 				<li><a href="buscar.html"><span class="icon-search" aria-hidden="true"></span><span>Buscar</span></a></li>
 				<li><a href="login.html"><span class="icon-user" aria-hidden="true"></span><span>Login</span></a></li>
-				<li><a href="#"><span class="icon-user-times" aria-hidden="true"></span><span>Logout</span></a></li>
+				<li onclick="cerrar();"><a href="#"><span class="icon-user-times" aria-hidden="true"></span><span>Logout</span></a></li>
 				<li><a href="registro.html"><span class="icon-user-plus" aria-hidden="true"></span><span>Registro</span></a></li>
 				<li><a href="nueva-receta.html"><span class="icon-plus-circled" aria-hidden="true"></span><span>Nueva receta</span></a></li>
 			</ul>
