--- a/Practica2/receta.html
+++ b/Practica2/receta.html
@@ -9,7 +9,7 @@
 		<title>Receta</title>
 
 	</head>
-	<body onload="arranque();">
+	<body onload="arranque();inicializarReceta();">
 		<header>
 			<div id="contenedor-header">
 				<img id="imagen-header" src="Images/logo-header.png" alt="logo">
