--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -11,7 +11,7 @@
 		<title>Inicio</title>
 
 	</head>
-	<body onload="arranque();peticionRecetas('./rest/receta/');">
+	<body onload="arranque();peticionRecetas('./rest/receta/?pag=0&lpag=6');">
 		<header>
 			<div id="contenedor-header">
 				<img id="imagen-header" src="Images/logo-header.png" alt="logo">
