--- a/clases/clase9_teoria.html
+++ b/clases/clase9_teoria.html
@@ -4,8 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Clase 9 teoria</title>
 	<script src="clase9_teoria.js"></script>
+	<link rel="stylesheet" type="text/css" href="clase9_teoria.css">
 </head>
 <body>
-	
+	<h1>Ejemplo de canvas</h1>
+	<canvas></canvas><br>
+	<button onclick="pintarRect01();">Rectangulo 01</button>
+
+	<script>
+		prepararCanvas();
+	</script>
 </body>
 </html>
