--- a/Practica2/acerca.html
+++ b/Practica2/acerca.html
@@ -11,7 +11,7 @@
 		<title>Inicio</title>
 
 	</head>
-	<body>
+	<body onload="arranque();">
 		<header>
 			<div id="contenedor-header">
 				<img id="imagen-header" src="Images/logo-header.png" alt="logo">
