--- a/Practica2/acerca.html
+++ b/Practica2/acerca.html
@@ -37,7 +37,7 @@
 		<div id="contenedor-acercade">
 			<section id="section-acercade">	  
 				<h2>Acerca de</h2>  
-		    	<h4>Práctica 1 Programación del cliente web</h4>
+		    	<h4>Práctica 2 Programación del cliente web</h4>
 		    	<p>
 		    		<b>Curso: </b>2º.
 		    		<br>
@@ -56,7 +56,7 @@
 		    		<b>Correo electronico: </b>rubensipala@gmail.com
 					<br>
 					<br>
-					A la hora de la realización de la práctica no encontré ningun problema, pude completar todos los apartados tal y como se listan en el enunciado.
+					A la hora de eliminar las recetas y mostrar las siguientes el formato se descoloca.
 		    	</p>
 		    	<p>
 		    		
