--- a/Practica2/buscar.html
+++ b/Practica2/buscar.html
@@ -88,15 +88,15 @@
 		<!-- footer de este div para la barra de navegacion -->
 		<div id="contenedor-recetas-navegacion">
 			<p>
-				<a href="javascript:void(0);" onclick="primeraPagina();"><span class="icon-to-start-alt"></span></a>
+				<a href="javascript:void(0);" onclick="primeraPaginaBuscar();"><span class="icon-to-start-alt"></span></a>
 
-				<a href="javascript:void(0);" onclick="boton_atras();"><span class="icon-left-big"></span></a>
+				<a href="javascript:void(0);" onclick="boton_atras_Buscar();"><span class="icon-left-big"></span></a>
 
 				<span></span>
 
-				<a href="javascript:void(0);" onclick="boton_adelante();"><span class="icon-right-big"></span></a>
+				<a href="javascript:void(0);" onclick="boton_adelante_Buscar();"><span class="icon-right-big"></span></a>
 
-				<a href="javascript:void(0);" onclick="ultimaPagina();"><span class="icon-to-end-alt"></span></a>
+				<a href="javascript:void(0);" onclick="ultimaPaginaBuscar();"><span class="icon-to-end-alt"></span></a>
 			</p>
 			
 		</div>
