imrpvements en la practica 3

--- a/Practica2/buscar.html
+++ b/Practica2/buscar.html
@@ -65,7 +65,7 @@
 					
 					<br>
 					<input type="submit" name="Enviar">
-					<input type="reset" name="">
+					<input type="reset" name="reset">
 				</form>
 
 				
