hasta copiar imagen con rallas y todo

--- a/Practica3/acerca.html
+++ b/Practica3/acerca.html
@@ -9,14 +9,42 @@
 </head>
 <body>
 	<header>
-		<img href="index.html" src="./Images/Logo-header.png">
+		<img onclick="redireccion();" src="./Images/Logo-header.png">
 		<div>
 			<h1>Página de Puzzles</h1>
 			<p>La mejor página para hacer un puzzle</p>
 		</div>	
 	</header>
 	
-	
+	<div id="contenedor-acercade">
+			<section id="section-acercade">	  
+				<h2>Acerca de</h2>  
+		    	<h4>Práctica 2 Programación del cliente web</h4>
+		    	<p>
+		    		<b>Curso: </b>2º.
+		    		<br>
+		    		<b>Titulación: </b>Ingenieria Multimedia.
+		    	</p>
+		    	<h3>Información personal</h3>
+		    	<p>
+		    		<b>DNI: </b> 20084606-V
+		    		<br>
+		    		<b>Nombre: </b>Rubén
+		    		<br>
+		    		<b>Apellidos: </b>Rubio Martínez
+		    		<br>
+		    		<b>Grupo: </b> 7
+		    		<br>
+		    		<b>Correo electronico: </b>rubensipala@gmail.com
+					<br>
+					<br>
+					
+		    	</p>
+		    	<p>
+		    		
+		    	</p>
+	  		</section>
+		</div>
 
 	<footer id="footer-comun">
 	        <div class="social-footer">
