--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -49,10 +49,7 @@
 					<option>Dificil</option>
 				</select>
 				<div id="contador">
-					<div class="reloj" id="Horas">00</div>
-					<div class="reloj" id="Minutos">:00</div>
-					<div class="reloj" id="Segundos">:00</div>
-					<div class="reloj" id="Centesimas">:00</div>
+					<div style="display:none;" class="reloj" id="Segundos"></div>
 				</div>
 			</footer>
 			
