--- a/Practica3/acerca.html
+++ b/Practica3/acerca.html
@@ -19,7 +19,7 @@
 	<div id="contenedor-acercade">
 			<section id="section-acercade">	  
 				<h2>Acerca de</h2>  
-		    	<h4>Práctica 2 Programación del cliente web</h4>
+		    	<h4>Práctica 3 Programación del cliente web</h4>
 		    	<p>
 		    		<b>Curso: </b>2º.
 		    		<br>
@@ -41,7 +41,7 @@
 					
 		    	</p>
 		    	<p>
-		    		
+		    		Por falta de tiempo no pude realizar la ultima parte de la práctica.
 		    	</p>
 	  		</section>
 		</div>
